@@ -9,6 +9,10 @@ Revision history for DBIx::Class
           http://lists.scsys.co.uk/pipermail/dbix-class/2013-June/011374.html)
         - Setting quote_names propagates to SQL::Translator when producing
           SQLite DDL (it is one of the few producers *NOT* quoting by default)
+        - Fix incorrect binding of large integers on old versions of
+          DBD::SQLite (now DBIC simply always binds SQLite ints as BIGINT)
+        - Silence (harmless) warnings on recent DBD::SQLite versions, when
+          inserting/updating large integers on 32bit ivsize systems (RT#76395)
         - Back out self-cleaning from DBIx::Class::Carp for the time being
           (as a side effect fixes RT#86267)
         - Fix incorrect internal use of implicit list context in copy()
